# hadar

./: .gitignore  CLAUDE.md  README.md  ou_harvest.toml.example  pyproject.toml  setup.ps1  setup.sh
docs/: university-support-summary.md
photo_test/: README.md  camera_deepface.py
scripts/: fetch_test_fixtures.py
src/ou_harvest/: __init__.py  cli.py  config.py  demographics.py  events.py  http.py  llm.py  models.py  parsers.py  pipeline.py  runner.py  secrets.py  storage.py  text_extract.py  tui.py
src/ou_harvest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ou_harvest/adapters/: __init__.py  base.py  bgu.py  openu.py  technion_med.py
tests/: fixture_helpers.py  test_adapters.py  test_cv_enrichment.py  test_demographics.py  test_e2e_connectors.py  test_http.py  test_llm.py  test_parsers.py  test_pipeline.py  test_secrets_and_runner.py  test_storage.py  test_tui.py
tests/fixtures/: bgu_listing_live.html  bgu_profile_abu.html  bgu_profile_nonbgu.html  bgu_profile_sapirabu.html  bgu_results.html  discovery_default.html  openu_freeform_page.html  openu_personal_page_no_photo.html  personal_page.html  results_page.html  results_table_page.html  technion_profile.html  technion_sitemap.xml
